# project-templates

./: .gitignore
angular-dynamic-create-form/backend/: README.md  main.py  pyproject.toml  requirements.txt
angular-dynamic-create-form/backend/app/application/dtos/: dynamic_dto.py  person_dto.py  product_dto.py
angular-dynamic-create-form/backend/app/application/use_cases/: create_object.py  delete_object.py  get_all_objects.py
angular-dynamic-create-form/backend/app/application/use_cases/person/: create_person.py  delete_person.py  get_all_persons.py
angular-dynamic-create-form/backend/app/application/use_cases/product/: create_product.py  delete_product.py  get_all_products.py
angular-dynamic-create-form/backend/app/domain/entities/: field_config.py  person.py  product.py
angular-dynamic-create-form/backend/app/domain/object_types/: person.json
angular-dynamic-create-form/backend/app/domain/repositories/: object_config_repository.py  object_repository.py  person_repository.py  product_repository.py
angular-dynamic-create-form/backend/app/exposition/: dependencies.py
angular-dynamic-create-form/backend/app/exposition/routers/: objects_router.py  persons_router.py  products_router.py
angular-dynamic-create-form/backend/app/infrastructure/config/: file_object_config_repository.py
angular-dynamic-create-form/backend/app/infrastructure/database/: engine.py  table_registry.py
angular-dynamic-create-form/backend/app/infrastructure/repositories/: in_memory_person_repository.py  in_memory_product_repository.py  sqlite_object_repository.py
(+146 files in other folders)
