[project]
name = "dynamic-create-form-backend"
version = "1.0.0"
description = "FastAPI backend for the Angular Dynamic Create Form application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"
